<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:layout_marginStart="@dimen/mstart"
        android:layout_marginTop="@dimen/martop"
        android:src="@drawable/argentina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:layout_marginTop="@dimen/martop"
        android:layout_marginEnd="@dimen/mrgnend"
        android:src="@drawable/jamaika"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mt"
        android:text="@string/argentina"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/textsize"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints,SpUsage" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mt"
        android:text="@string/Jamaika"
        android:textColor="@color/color"
        android:textSize="@dimen/textsize"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints,SpUsage" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textsize"
        android:layout_marginTop="@dimen/mrgt"
        android:layout_marginEnd="@dimen/mrgnend"
        android:text="@string/text"
        android:textColor="@color/color"
        android:textSize="@dimen/tsize"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/scorewidth"
        android:layout_height="@dimen/scoreheight"
        android:layout_marginTop="@dimen/margintop"
        android:text="@string/_5"
        android:textColor="@color/score"
        android:textSize="@dimen/textscore"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints,SpUsage" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/scorewidth"
        android:layout_height="@dimen/scoreheight"
        android:layout_marginTop="@dimen/margintop"
        android:text="@string/_0"
        android:textColor="@color/score"
        android:textSize="@dimen/textscore"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints,SpUsage" />
    <Button
        android:layout_width="@dimen/wdht"
        android:layout_height="@dimen/hght"
        android:layout_marginStart="@dimen/marginstart"
        android:layout_marginEnd="@dimen/end"
        android:layout_marginBottom="@dimen/btn"
        android:text="@string/dropping"
        android:textSize="@dimen/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,SpUsage" />
</androidx.constraintlayout.widget.ConstraintLayout>